Remove unnecessary getter methods from internal code